# discord-async-rs

./: Cargo.toml  README.md
src/: client.rs  discord.rs  gateway.rs  guild.rs  interaction.rs  lib.rs  message.rs  types.rs  voice.rs
src/api/: channel.rs  mod.rs
src/codec/: json.rs  mod.rs
src/gateway/: command.rs  event.rs  mod.rs
src/gateway/encoder/: json.rs  mod.rs
src/protocol/: event.rs  mod.rs
src/voice/: connection.rs  gateway.rs  opus.rs  pcm.rs  player.rs  socket.rs
src/voice/source/: ffmpeg.rs  file.rs  mod.rs
