[package]
name = "discord-async"
version = "0.1.0"
authors = ["kebabtent <kebabtent@gmail.com>"]
description = "Asynchronous Rust library for the Discord API"
license = "Apache-2.0"
repository = "https://github.com/kebabtent/discord-async-rs"
readme = "README.md"
edition = "2018"

[dependencies]
async-tls = "0.7"
async-tungstenite = { version = "0.5", features = ["async-tls", "tokio-runtime"] }
bitflags = "1.2"
chrono = "0.4"
either = "1.5"
futures = "0.3"
log = "0.4"
never = "0.1"
pin-project = "0.4"
reqwest = { version = "0.10", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = " 0.1"
tokio = { version = "0.2", features = ["full"] }
tungstenite = "0.10"