[package]
name = "discord-async"
version = "0.1.0"
authors = ["kebabtent <kebabtent@gmail.com>"]
description = "Asynchronous Rust library for the Discord API"
license = "Apache-2.0"
repository = "https://github.com/kebabtent/discord-async-rs"
readme = "README.md"
edition = "2021"

[features]
sqlx = ["discord-types/sqlx"]
voice = ["byteorder", "opus", "xsalsa20poly1305"]
#voice = ["byteorder", "opus", "sodiumoxide"]

[dependencies]
async-fuse = { git = "https://github.com/kebabtent/async-fuse", branch = "take", features = ["stream"] }
async-tungstenite = { version = "0.21", features = ["tokio-rustls-native-certs"] }
bitflags = "2.1"
byteorder = { version = "1.4", optional = true}
bytes = "1.0"
chrono = "0.4"
discord-types = { git = "https://github.com/kebabtent/discord-types-rs" }
#discord-types = { path = "../discord-types" }
futures = "0.3"
log = "0.4"
never = "0.1"
opus = { version = "0.3", optional = true }
pin-project = "1.0"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "multipart"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = " 0.1"
tokio = { version = "1.27", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "net"] }
urlencoding = "2.1"
xsalsa20poly1305 = { version = "0.9", optional = true }
#sodiumoxide = { version = "0.2", optional = true }
